# MaliciousDomainDetector

./: CMakeLists.txt  Readme.md  main.cpp
DomainScanner/: DomainScanner.cpp  DomainScanner.h
MaliciousDomainDetector/: MaliciousDomainDetector.cpp  MaliciousDomainDetector.h
SQLite/: Sqlite.cpp  Sqlite.h
SqlDataFetcher/: SqlDataFetcher.cpp  SqlDataFetcher.h
libs/: sqlite3.lib
